<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lavender2"
    tools:context="LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="615dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="320dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:autofillHints=""
                    android:background="@drawable/lavender_border"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="18dp"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/lavender_border"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/lavender"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="40dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupRedirectText"
                    android:text="@string/no_account_yet_sign_up"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginTop="9dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/black"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="7" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>